// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > briefing response 1`] = `
{
  "account": {
    "accounting_equity": "1000000",
    "cash": "100000",
    "display_equity": 1000000,
    "drawdown_basis": "percentage_from_historical_peak_equity",
    "drawdown_decimal": 0,
    "drawdown_display": "+0.00%",
    "equity": 1000000,
    "initial_cash": "100000",
    "positions": [],
    "return_decimal": 9,
    "return_display": "+900.00%",
    "risk_tag": null,
  },
  "account_summary": {
    "accounting_equity": "1000000",
    "cash": "100000",
    "display_equity": 1000000,
    "drawdown_basis": "percentage_from_historical_peak_equity",
    "drawdown_decimal": 0,
    "drawdown_display": "+0.00%",
    "equity": 1000000,
    "initial_cash": "100000",
    "return_decimal": 9,
    "return_display": "+900.00%",
    "risk_tag": null,
  },
  "agent": {
    "id": "<agent_id>",
    "name": "SDK <run_token>",
    "primary_market": "prediction",
    "risk_preference": "balanced",
    "runner_status": "ready",
    "status": "active",
    "strategy_style": "event-driven",
  },
  "agent_profile": {
    "agent_id": "<agent_id>",
    "familiar_symbols_or_event_types": [
      "<symbol>",
    ],
    "market_preferences": [
      "prediction",
    ],
    "name": "SDK <run_token>",
    "primary_market": "prediction",
    "public_profile_summary": "Live SDK integration test agent",
    "risk_preference": "balanced",
    "strategy_style": "event-driven",
  },
  "competition": {
    "competition_phase": "testing",
    "created_at": "<created_at>",
    "description": null,
    "end_at": null,
    "executed_action_count": 0,
    "id": "comp_open_2026",
    "leaderboard_visibility": {
      "competition_phase": "testing",
      "min_valid_executed_actions": 0,
      "public_visibility_requires_claim": true,
    },
    "leaderboard_visibility_status": "visible",
    "market_types": [],
    "name": "AgentTrader Open Season",
    "required_executed_actions_for_visibility": 0,
    "rule_version": "0.1",
    "start_at": null,
    "status": "active",
  },
  "competition_phase": "testing",
  "current_time": "<iso_timestamp>",
  "endpoints": {
    "briefing_url": "http://127.0.0.1:3100/api/agent/briefing",
    "decisions_url": "http://127.0.0.1:3100/api/agent/decisions",
    "detail_request_url": "http://127.0.0.1:3100/api/agent/detail-request",
    "skill_url": "http://127.0.0.1:3100/skill.md",
  },
  "executed_action_count": 0,
  "generated_at": "<generated_at>",
  "leaderboard": null,
  "leaderboard_visibility_status": "visible",
  "market_overview": {
    "headline": "0 agents are active in the current arena.",
    "recent_public_trades": [],
    "watchlist": [
      {
        "change_24h": null,
        "last_price": "0.43",
        "market": "prediction",
        "symbol": "<symbol>",
      },
    ],
  },
  "market_signal_summary": {
    "actionable_markets": [
      "crypto",
      "prediction",
    ],
    "crypto": {
      "status": "open",
      "summary": "Crypto market data is currently limited.",
    },
    "highlights": [
      "Crypto: Crypto market data is currently limited.",
      "Prediction: 1 prediction markets are highlighted for this agent, with execution-ready outcomes surfaced conservatively.",
      "Stock: Stock market data is currently limited.",
    ],
    "prediction": {
      "active_markets": 1,
      "featured_market": {
        "active": true,
        "closed": false,
        "end_date": "<iso_timestamp>",
        "object_id": "pm:<symbol>",
        "outcomes": [
          {
            "blocked_reason": null,
            "decision_allowed": true,
            "decision_allowed_scope": "execution_level",
            "detail_required_before_decision": false,
            "event_id": "<symbol>",
            "execution_allowed": true,
            "external_token_id": "<yes_outcome_id>",
            "object_id": "pm:<symbol>:YES",
            "outcome_id": "<yes_outcome_id>",
            "outcome_name": "Yes",
            "price": "0.43",
            "quote_health": "reliable",
            "requires_detail_for_execution_quality": false,
            "rule_allowed": true,
          },
          {
            "blocked_reason": null,
            "decision_allowed": true,
            "decision_allowed_scope": "execution_level",
            "detail_required_before_decision": false,
            "event_id": "<symbol>",
            "execution_allowed": true,
            "external_token_id": "<no_outcome_id>",
            "object_id": "pm:<symbol>:NO",
            "outcome_id": "<no_outcome_id>",
            "outcome_name": "No",
            "price": "0.57",
            "quote_health": "reliable",
            "requires_detail_for_execution_quality": false,
            "rule_allowed": true,
          },
        ],
        "price": "0.43",
        "reason": null,
        "recommended_action": "REVIEW_TRADABLE_OUTCOMES",
        "symbol": "<symbol>",
        "title": "Will the SDK integration trade execute?",
        "tradable_now": true,
        "volume_24h": 125000,
      },
      "reason": null,
      "recommended_action": "REVIEW_TRADABLE_OUTCOMES",
      "status": "open",
      "summary": "1 prediction markets are highlighted for this agent, with execution-ready outcomes surfaced conservatively.",
      "top_markets": [
        {
          "active": true,
          "closed": false,
          "end_date": "<iso_timestamp>",
          "object_id": "pm:<symbol>",
          "outcomes": [
            {
              "blocked_reason": null,
              "decision_allowed": true,
              "decision_allowed_scope": "execution_level",
              "detail_required_before_decision": false,
              "event_id": "<symbol>",
              "execution_allowed": true,
              "external_token_id": "<yes_outcome_id>",
              "object_id": "pm:<symbol>:YES",
              "outcome_id": "<yes_outcome_id>",
              "outcome_name": "Yes",
              "price": "0.43",
              "quote_health": "reliable",
              "requires_detail_for_execution_quality": false,
              "rule_allowed": true,
            },
            {
              "blocked_reason": null,
              "decision_allowed": true,
              "decision_allowed_scope": "execution_level",
              "detail_required_before_decision": false,
              "event_id": "<symbol>",
              "execution_allowed": true,
              "external_token_id": "<no_outcome_id>",
              "object_id": "pm:<symbol>:NO",
              "outcome_id": "<no_outcome_id>",
              "outcome_name": "No",
              "price": "0.57",
              "quote_health": "reliable",
              "requires_detail_for_execution_quality": false,
              "rule_allowed": true,
            },
          ],
          "price": "0.43",
          "reason": null,
          "recommended_action": "REVIEW_TRADABLE_OUTCOMES",
          "symbol": "<symbol>",
          "title": "Will the SDK integration trade execute?",
          "tradable_now": true,
          "volume_24h": 125000,
        },
      ],
      "tradable_now": true,
    },
    "stock": {
      "status": "closed",
      "summary": "Stock market data is currently limited.",
    },
  },
  "markets": {
    "crypto": {
      "data_quality": {
        "change_24h_complete": true,
        "notes": [
          "no_recent_quotes_available_for_watchlist",
        ],
        "volume_24h_complete": true,
      },
      "market_type": "crypto",
      "source": "unavailable",
      "status": "open",
      "summary": "Crypto market data is currently limited.",
      "top_movers": [],
    },
    "prediction": {
      "active_markets": 1,
      "data_quality": {
        "notes": [],
      },
      "featured_market": {
        "active": true,
        "closed": false,
        "end_date": "<iso_timestamp>",
        "object_id": "pm:<symbol>",
        "outcomes": [
          {
            "blocked_reason": null,
            "decision_allowed": true,
            "decision_allowed_scope": "execution_level",
            "detail_required_before_decision": false,
            "event_id": "<symbol>",
            "execution_allowed": true,
            "external_token_id": "<yes_outcome_id>",
            "object_id": "pm:<symbol>:YES",
            "outcome_id": "<yes_outcome_id>",
            "outcome_name": "Yes",
            "price": "0.43",
            "quote_health": "reliable",
            "requires_detail_for_execution_quality": false,
            "rule_allowed": true,
          },
          {
            "blocked_reason": null,
            "decision_allowed": true,
            "decision_allowed_scope": "execution_level",
            "detail_required_before_decision": false,
            "event_id": "<symbol>",
            "execution_allowed": true,
            "external_token_id": "<no_outcome_id>",
            "object_id": "pm:<symbol>:NO",
            "outcome_id": "<no_outcome_id>",
            "outcome_name": "No",
            "price": "0.57",
            "quote_health": "reliable",
            "requires_detail_for_execution_quality": false,
            "rule_allowed": true,
          },
        ],
        "price": "0.43",
        "reason": null,
        "recommended_action": "REVIEW_TRADABLE_OUTCOMES",
        "symbol": "<symbol>",
        "title": "Will the SDK integration trade execute?",
        "tradable_now": true,
        "volume_24h": 125000,
      },
      "market_type": "prediction",
      "reason": null,
      "recommended_action": "REVIEW_TRADABLE_OUTCOMES",
      "source": "cached_markets",
      "status": "open",
      "summary": "1 prediction markets are highlighted for this agent, with execution-ready outcomes surfaced conservatively.",
      "top_markets": [
        {
          "active": true,
          "closed": false,
          "end_date": "<iso_timestamp>",
          "object_id": "pm:<symbol>",
          "outcomes": [
            {
              "blocked_reason": null,
              "decision_allowed": true,
              "decision_allowed_scope": "execution_level",
              "detail_required_before_decision": false,
              "event_id": "<symbol>",
              "execution_allowed": true,
              "external_token_id": "<yes_outcome_id>",
              "object_id": "pm:<symbol>:YES",
              "outcome_id": "<yes_outcome_id>",
              "outcome_name": "Yes",
              "price": "0.43",
              "quote_health": "reliable",
              "requires_detail_for_execution_quality": false,
              "rule_allowed": true,
            },
            {
              "blocked_reason": null,
              "decision_allowed": true,
              "decision_allowed_scope": "execution_level",
              "detail_required_before_decision": false,
              "event_id": "<symbol>",
              "execution_allowed": true,
              "external_token_id": "<no_outcome_id>",
              "object_id": "pm:<symbol>:NO",
              "outcome_id": "<no_outcome_id>",
              "outcome_name": "No",
              "price": "0.57",
              "quote_health": "reliable",
              "requires_detail_for_execution_quality": false,
              "rule_allowed": true,
            },
          ],
          "price": "0.43",
          "reason": null,
          "recommended_action": "REVIEW_TRADABLE_OUTCOMES",
          "symbol": "<symbol>",
          "title": "Will the SDK integration trade execute?",
          "tradable_now": true,
          "volume_24h": 125000,
        },
      ],
      "tradable_now": true,
    },
    "stock": {
      "data_quality": {
        "change_24h_complete": true,
        "notes": [
          "no_recent_quotes_available_for_watchlist",
        ],
        "volume_24h_complete": true,
      },
      "market_type": "stock",
      "source": "unavailable",
      "status": "closed",
      "summary": "Stock market data is currently limited.",
      "top_movers": [],
    },
  },
  "open_positions": [],
  "positions_summary": {
    "by_market": {},
    "gross_market_value": 0,
    "largest_position": null,
    "total_positions": 0,
    "unrealized_pnl": 0,
  },
  "protocol_version": "agentrader.v1",
  "public_profile_summary": "Live SDK integration test agent",
  "required_executed_actions_for_visibility": 0,
  "risk_status": {
    "awaiting_operator_resolution": false,
    "can_open_new_positions": true,
    "can_trade": true,
    "constraints": [],
    "current_mode": "normal",
    "decision_allowed": true,
    "decision_window": {
      "id": "<window_id>",
      "last_decision_at": null,
      "limit": 1,
      "reached": false,
      "used": 0,
    },
    "max_single_buy_notional": 250000,
    "paused_by_operator": false,
    "risk_tag": null,
    "sizing_equity": 1000000,
    "summary": "Account is clear to review markets and trade within standard limits.",
  },
  "schema_version": "2026-04-19.1",
  "timestamp": "<timestamp>",
  "type": "agent_briefing",
  "window_id": "<window_id>",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > daily summary response 1`] = `
{
  "agent_id": "<agent_id>",
  "status": "created",
  "summary_date": "<summary_date>",
  "type": "daily_summary_update_result",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > decision response 1`] = `
{
  "actions": [
    {
      "action": "buy",
      "action_id": "act_<run_token>",
      "canonical_object_id": "pm:<symbol>:YES",
      "event_id": "<symbol>",
      "external_token_id": "<yes_outcome_id>",
      "fee": 0.5,
      "fee_bps": 5,
      "fee_currency": "USD",
      "fill_price": 0.43,
      "fillable_notional_usd_at_submission": 1000,
      "filled_amount_usd": 1000,
      "filled_units": 2325.581395,
      "liquidity_model": "top_of_book_ioc",
      "market": "prediction",
      "notional_usd": 1000,
      "object_id": "pm:<symbol>:YES",
      "outcome_id": "<yes_outcome_id>",
      "outcome_name": "Yes",
      "quote_at_submission": {
        "ask": "0.43",
        "bid": "0.42",
        "last_price": "0.43",
        "midpoint": "0.425",
        "spread": "0.01",
        "timestamp": "<timestamp>",
      },
      "quote_debug": {
        "db_before_submission": {
          "last_price": "0.43",
          "method": "walk_book",
          "status": "hit",
          "timestamp": "<timestamp>",
        },
        "db_latest": {
          "status": "miss",
        },
        "decision_submitted_at": "<iso_timestamp>",
        "instrument_id": "<symbol>::<yes_outcome_id>",
        "live": {
          "status": "miss",
        },
        "market": "prediction",
        "price_found": true,
        "redis": {
          "status": "miss",
        },
        "rejection_reason": null,
        "selected_source": "db:sdk-integration-feed",
        "side": "buy",
      },
      "quote_source": "db:sdk-integration-feed",
      "reason_tag": "policy repricing",
      "reasoning_summary": "The current detail payload whitelists the YES outcome, top-of-book is internally consistent, and the position size remains small versus available cash and concentration limits.",
      "rejection_reason": null,
      "requested_amount_usd": 1000,
      "requested_units": 2325.581395,
      "side": "buy",
      "slippage": 0,
      "slippage_bps": 0,
      "status": "filled",
      "symbol": "<symbol>",
      "top_tier": "normal",
      "unfilled_amount_usd": 0,
      "unfilled_reason": null,
      "unfilled_units": 0,
    },
  ],
  "decision_id": "<decision_id>",
  "decision_rationale": "The stored detail response confirms that the YES outcome is currently decision-allowed with reliable top-of-book data, so a small starter position is acceptable in this window.",
  "execution_status": "executed",
  "generated_at": "<generated_at>",
  "portfolio_changed": true,
  "post_trade_account": {
    "cash": 98999.5,
    "drawdown_decimal": 0,
    "drawdown_display": "+0.00%",
    "equity": 98999.51,
    "return_decimal": -0.010005,
    "return_display": "-1.00%",
  },
  "post_trade_positions": [
    {
      "avg_price": "0.43",
      "event_id": "<symbol>",
      "market": "prediction",
      "market_price": "0.43",
      "object_id": "pm:<symbol>:YES",
      "outcome_id": "<yes_outcome_id>",
      "outcome_name": "Yes",
      "qty": "2325.581395",
      "symbol": "<symbol>",
    },
  ],
  "post_trade_risk_status": {
    "can_open_new_positions": true,
    "can_trade": true,
    "current_mode": "normal",
    "risk_tag": null,
  },
  "protocol_version": "agentrader.v1",
  "request_success": true,
  "schema_version": "2026-04-27.1",
  "submission_id": "<submission_id>",
  "type": "decision_execution_result",
  "window_id": "<window_id>",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > detail response 1`] = `
{
  "detail_summary": {
    "common_blocked_reasons": [
      "SELECT_TRADABLE_OUTCOME_REQUIRED",
    ],
    "decision_allowed_objects": 2,
    "recommended_action": "SELECT_FROM_DECISION_ALLOWED_OBJECTS",
    "requested_objects": 1,
    "tradable_objects": 2,
  },
  "generated_at": "<generated_at>",
  "objects": [
    {
      "allowed_actions": [],
      "blocked_reason": "SELECT_TRADABLE_OUTCOME_REQUIRED",
      "candles": [
        {
          "close": "0.41",
          "high": "0.42",
          "low": "0.37",
          "open": "0.39",
          "open_time": "<iso_timestamp>",
          "volume": "25000",
        },
        {
          "close": "0.43",
          "high": "0.44",
          "low": "0.4",
          "open": "0.41",
          "open_time": "<iso_timestamp>",
          "volume": "31000",
        },
      ],
      "candles_error": null,
      "candles_interval": "1h",
      "candles_source": "db",
      "canonical_object_id": "pm:<symbol>:YES",
      "data_quality": {
        "candles_have_volume": true,
        "notes": [
          "quote_change_24h_missing",
        ],
        "quote_bound_to_outcome": true,
        "quote_change_24h_complete": false,
        "quote_volume_24h_complete": true,
        "warnings_present": false,
      },
      "decision_allowed": false,
      "decision_allowed_objects": [
        {
          "allowed_actions": [
            "buy",
          ],
          "blocked_reason": null,
          "book_debug": null,
          "condition_id": "<symbol>_condition",
          "decision_allowed": true,
          "event_id": "<symbol>",
          "external_token_id": "<yes_outcome_id>",
          "last_price": "0.43",
          "market_slug": "<symbol>",
          "object_id": "pm:<symbol>:YES",
          "outcome_id": "<yes_outcome_id>",
          "outcome_name": "Yes",
          "question": "Will the SDK integration trade execute?",
          "quote": {
            "ask": "0.43",
            "bid": "0.42",
            "cache_age_ms": "<cache_age_ms>",
            "last_price": "0.43",
            "midpoint": "0.425",
            "quote_timestamp": "<iso_timestamp>",
            "source": "db",
            "spread": "0.01",
            "stale": false,
            "timestamp": "<timestamp>",
          },
          "tradable": true,
        },
        {
          "allowed_actions": [
            "buy",
          ],
          "blocked_reason": null,
          "book_debug": null,
          "condition_id": "<symbol>_condition",
          "decision_allowed": true,
          "event_id": "<symbol>",
          "external_token_id": "<no_outcome_id>",
          "last_price": "0.57",
          "market_slug": "<symbol>",
          "object_id": "pm:<symbol>:NO",
          "outcome_id": "<no_outcome_id>",
          "outcome_name": "No",
          "question": "Will the SDK integration trade execute?",
          "quote": {
            "ask": "0.57",
            "bid": "0.56",
            "cache_age_ms": "<cache_age_ms>",
            "last_price": "0.57",
            "midpoint": "0.565",
            "quote_timestamp": "<iso_timestamp>",
            "source": "db",
            "spread": "0.01",
            "stale": false,
            "timestamp": "<timestamp>",
          },
          "tradable": true,
        },
      ],
      "depth": {
        "ask_size": "10000",
        "best_ask": "0.43",
        "best_bid": "0.42",
        "bid_size": "10000",
        "note": "Depth is approximated from top-of-book data when top-of-book passes sanity checks",
        "spread": "0.01",
      },
      "event_details": null,
      "event_id": "<symbol>",
      "external_token_id": "<yes_outcome_id>",
      "market": "prediction",
      "market_details": {
        "accepting_orders": true,
        "active": true,
        "archived": false,
        "category": "Economy",
        "clob_token_ids": [
          "<yes_outcome_id>",
          "<no_outcome_id>",
        ],
        "closed": false,
        "condition_id": "<symbol>_condition",
        "description": "SDK integration-test prediction market.",
        "event_title": "Will the SDK integration trade execute?",
        "liquidity": 500000,
        "market_status": "active",
        "name": "Will the SDK integration trade execute?",
        "outcomes": [
          {
            "external_token_id": "<yes_outcome_id>",
            "id": "<yes_outcome_id>",
            "name": "Yes",
            "object_id": "pm:<symbol>:YES",
            "price": 0.43,
          },
          {
            "external_token_id": "<no_outcome_id>",
            "id": "<no_outcome_id>",
            "name": "No",
            "object_id": "pm:<symbol>:NO",
            "price": 0.57,
          },
        ],
        "quote": {
          "ask": "0.43",
          "askSize": "10000",
          "bid": "0.42",
          "bidSize": "10000",
          "change24h": null,
          "depthSnapshot": "{"bids":[{"price":0.42,"size":10000}],"asks":[{"price":0.43,"size":10000}],"snapshot_at":"<iso_timestamp>"}",
          "lastPrice": "0.43",
          "market": "prediction",
          "midpoint": "0.425",
          "outcomeId": "<yes_outcome_id>",
          "outcomeName": "Yes",
          "provider": "sdk-integration-feed",
          "spread": "0.01",
          "symbol": "<symbol>",
          "timestamp": "<timestamp>",
          "volume24h": 125000,
        },
        "resolution_source": "sdk-integration-test",
        "resolved_outcome_id": null,
        "resolves_at": "<iso_timestamp>",
        "rules": "Resolves to the matching outcome for the SDK integration test.",
        "symbol": "<symbol>",
        "title": "Will the SDK integration trade execute?",
        "volume_24h": 125000,
      },
      "no_trade_this_window": false,
      "object_id": "pm:<symbol>",
      "object_risk": {
        "can_add_exposure": true,
        "current_exposure_pct": 0,
        "current_exposure_usd": 0,
        "max_exposure_pct": 60,
        "max_exposure_usd": 600000,
        "remaining_buy_notional_usd": 600000,
      },
      "object_scope": "market",
      "outcome_id": "<yes_outcome_id>",
      "quote": {
        "ask": "0.43",
        "ask_size": "10000",
        "bid": "0.42",
        "bid_size": "10000",
        "cache_age_ms": "<cache_age_ms>",
        "canonical_object_id": "pm:<symbol>:YES",
        "change_24h": null,
        "external_token_id": "<yes_outcome_id>",
        "last_price": "0.43",
        "midpoint": "0.425",
        "object_id": "pm:<symbol>:YES",
        "outcome_id": "<yes_outcome_id>",
        "outcome_name": "Yes",
        "quote_timestamp": "<iso_timestamp>",
        "scope": "outcome",
        "source": "db",
        "spread": "0.01",
        "stale": false,
        "timestamp": "<timestamp>",
        "volume_24h": 125000,
      },
      "quote_error": null,
      "quote_source": "db",
      "requested_object_id": "pm:<symbol>",
      "retry_after_seconds": null,
      "retry_recommended": false,
      "suggested_alternatives": [
        "pm:<symbol>:YES",
        "pm:<symbol>:NO",
      ],
      "suggested_next_request": {
        "objects": [
          "pm:<symbol>:YES",
          "pm:<symbol>:NO",
        ],
        "reason": "Select one or more concrete prediction outcome object_ids before submitting a decision.",
        "scope": "outcome",
      },
      "symbol": "<symbol>",
      "tradable": false,
      "tradable_objects": [
        {
          "allowed_actions": [
            "buy",
          ],
          "blocked_reason": null,
          "book_debug": null,
          "condition_id": "<symbol>_condition",
          "decision_allowed": true,
          "event_id": "<symbol>",
          "external_token_id": "<yes_outcome_id>",
          "last_price": "0.43",
          "market_slug": "<symbol>",
          "object_id": "pm:<symbol>:YES",
          "outcome_id": "<yes_outcome_id>",
          "outcome_name": "Yes",
          "question": "Will the SDK integration trade execute?",
          "quote": {
            "ask": "0.43",
            "bid": "0.42",
            "cache_age_ms": "<cache_age_ms>",
            "last_price": "0.43",
            "midpoint": "0.425",
            "quote_timestamp": "<iso_timestamp>",
            "source": "db",
            "spread": "0.01",
            "stale": false,
            "timestamp": "<timestamp>",
          },
          "tradable": true,
        },
        {
          "allowed_actions": [
            "buy",
          ],
          "blocked_reason": null,
          "book_debug": null,
          "condition_id": "<symbol>_condition",
          "decision_allowed": true,
          "event_id": "<symbol>",
          "external_token_id": "<no_outcome_id>",
          "last_price": "0.57",
          "market_slug": "<symbol>",
          "object_id": "pm:<symbol>:NO",
          "outcome_id": "<no_outcome_id>",
          "outcome_name": "No",
          "question": "Will the SDK integration trade execute?",
          "quote": {
            "ask": "0.57",
            "bid": "0.56",
            "cache_age_ms": "<cache_age_ms>",
            "last_price": "0.57",
            "midpoint": "0.565",
            "quote_timestamp": "<iso_timestamp>",
            "source": "db",
            "spread": "0.01",
            "stale": false,
            "timestamp": "<timestamp>",
          },
          "tradable": true,
        },
      ],
      "unavailable_reason": null,
      "warnings": [],
    },
  ],
  "protocol_version": "agentrader.v1",
  "rate_limit": {
    "limit": 1,
    "used": 1,
    "window": "per_briefing_window",
  },
  "request_id": "<request_id>",
  "schema_version": "2026-04-19.1",
  "type": "detail_response",
  "warnings": [],
  "window_id": "<window_id>",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > error report response 1`] = `
{
  "created_at": "<created_at>",
  "report_id": "<report_id>",
  "report_type": "runtime_exception",
  "summary": "Recorded a synthetic runtime note after the live prediction trade to verify error-report persistence.",
  "type": "error_report_result",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > heartbeat response 1`] = `
{
  "agent_id": "<agent_id>",
  "pong": true,
  "runner_status": "ready",
  "server_time": "<server_time>",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > me after claim response 1`] = `
{
  "account": {
    "available_cash": "100000",
    "close_only": false,
    "display_equity": 1000000,
    "display_return_rate": 900,
    "initial_cash": "100000",
    "open_positions": 0,
    "return_rate": 900,
    "risk_mode": "normal",
    "risk_tag": null,
    "total_equity": 1000000,
  },
  "agent": {
    "claim_status": "claimed",
    "description": "Live SDK integration test agent",
    "familiar_symbols_or_event_types": [
      "<symbol>",
    ],
    "id": "<agent_id>",
    "last_heartbeat_at": "<iso_timestamp>",
    "market_preferences": [
      "prediction",
    ],
    "model_name": "gpt-test",
    "model_provider": "openai",
    "name": "SDK <run_token>",
    "primary_market": "prediction",
    "risk_preference": "balanced",
    "runner_status": "ready",
    "runtime_environment": "integration",
    "status": "active",
    "strategy_style": "event-driven",
    "x_url": null,
  },
  "agent_id": "<agent_id>",
  "briefing_frequency": 15,
  "claim_status": "claimed",
  "competition": {
    "competition_phase": "testing",
    "executed_action_count": 0,
    "leaderboard_visibility_status": "visible",
    "required_executed_actions_for_visibility": 0,
  },
  "competition_phase": "testing",
  "executed_action_count": 0,
  "familiar_symbols_or_event_types": [
    "<symbol>",
  ],
  "last_heartbeat_at": "<iso_timestamp>",
  "leaderboard": null,
  "leaderboard_visibility_status": "visible",
  "market_preferences": [
    "prediction",
  ],
  "model_name": "gpt-test",
  "model_provider": "openai",
  "name": "SDK <run_token>",
  "primary_market": "prediction",
  "profile_initialized": true,
  "required_executed_actions_for_visibility": 0,
  "risk_preference": "balanced",
  "runner_status": "ready",
  "runtime": {
    "active_window_id": "<window_id>",
    "heartbeat_interval_minutes": 15,
    "last_heartbeat_at": "<iso_timestamp>",
    "verified_at": "<iso_timestamp>",
  },
  "runtime_environment": "integration",
  "status": "active",
  "strategy_hint": "event-driven",
  "strategy_style": "event-driven",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > me before claim response 1`] = `
{
  "account": {
    "available_cash": "100000",
    "close_only": false,
    "display_equity": 1000000,
    "display_return_rate": 900,
    "initial_cash": "100000",
    "open_positions": 0,
    "return_rate": 900,
    "risk_mode": "normal",
    "risk_tag": null,
    "total_equity": 1000000,
  },
  "agent": {
    "claim_status": "unclaimed",
    "description": "Live SDK integration test agent",
    "familiar_symbols_or_event_types": [
      "<symbol>",
    ],
    "id": "<agent_id>",
    "last_heartbeat_at": null,
    "market_preferences": [
      "prediction",
    ],
    "model_name": "gpt-test",
    "model_provider": "openai",
    "name": "SDK <run_token>",
    "primary_market": "prediction",
    "risk_preference": "balanced",
    "runner_status": "idle",
    "runtime_environment": "integration",
    "status": "registered",
    "strategy_style": "event-driven",
    "x_url": null,
  },
  "agent_id": "<agent_id>",
  "briefing_frequency": 15,
  "claim_status": "unclaimed",
  "competition": {
    "competition_phase": "testing",
    "executed_action_count": 0,
    "leaderboard_visibility_status": "pending_actions",
    "required_executed_actions_for_visibility": 0,
  },
  "competition_phase": "testing",
  "executed_action_count": 0,
  "familiar_symbols_or_event_types": [
    "<symbol>",
  ],
  "last_heartbeat_at": null,
  "leaderboard": null,
  "leaderboard_visibility_status": "pending_actions",
  "market_preferences": [
    "prediction",
  ],
  "model_name": "gpt-test",
  "model_provider": "openai",
  "name": "SDK <run_token>",
  "primary_market": "prediction",
  "profile_initialized": true,
  "required_executed_actions_for_visibility": 0,
  "risk_preference": "balanced",
  "runner_status": "idle",
  "runtime": {
    "active_window_id": null,
    "heartbeat_interval_minutes": 15,
    "last_heartbeat_at": null,
    "verified_at": null,
  },
  "runtime_environment": "integration",
  "status": "registered",
  "strategy_hint": "event-driven",
  "strategy_style": "event-driven",
}
`;

exports[`live sdk integration > sdk client completes a full live prediction workflow against web-new > registration response 1`] = `
{
  "agent_id": "<agent_id>",
  "api_key": "<api_key>",
  "claim_token": "<claim_token>",
  "claim_url": "<claim_url>",
  "message": "Initialization completed and agent registered. Ask your human to sign in and claim this agent before starting heartbeat.",
  "next_steps": {
    "briefing_url": "http://127.0.0.1:3100/api/agent/briefing",
    "claim_status_url": "http://127.0.0.1:3100/api/agent/me",
    "daily_summary_url": "http://127.0.0.1:3100/api/agent/daily-summary-update",
    "decisions_url": "http://127.0.0.1:3100/api/agent/decisions",
    "detail_request_url": "http://127.0.0.1:3100/api/agent/detail-request",
    "endpoint_index_url": "http://127.0.0.1:3100/skill/endpoints.md",
    "error_report_url": "http://127.0.0.1:3100/api/agent/error-report",
    "heartbeat_guide_url": "http://127.0.0.1:3100/skill/heartbeat.md",
    "heartbeat_ping_url": "http://127.0.0.1:3100/api/openclaw/agents/heartbeat-ping",
    "runtime_guide_url": "http://127.0.0.1:3100/skill/heartbeat.md",
    "schema_index_url": "http://127.0.0.1:3100/skill/schemas.md",
    "skill_file_urls": {
      "constraints": "http://127.0.0.1:3100/skill/constraints.md",
      "decision": "http://127.0.0.1:3100/skill/decision.md",
      "endpoints": "http://127.0.0.1:3100/skill/endpoints.md",
      "heartbeat": "http://127.0.0.1:3100/skill/heartbeat.md",
      "initialization": "http://127.0.0.1:3100/skill/initialization.md",
      "integration": "http://127.0.0.1:3100/skill/integration.md",
      "schemas": "http://127.0.0.1:3100/skill/schemas.md",
    },
    "skill_url": "http://127.0.0.1:3100/skill.md",
  },
  "status": "registered",
}
`;
